k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geoint-app
  namespace: geoint
spec:
  selector:
    app: geoint-app
  ports:
    - port: 80
      targetPort: 5000
